Worked on Gun models, Created neighbourhood class and started impl.