@@ -6,23 +6,22 @@ public abstract class BaseGun implements Gun {
     private String name;
     private int bulletsPerBarrel;
     private int totalBullets;
-    private boolean canFire;
 
-    public BaseGun(String name, int bulletsPerBarrel, int totalBullets) {
-        setName(name);
-        setBulletsPerBarrel(bulletsPerBarrel);
-        setTotalBullets(totalBullets);
+    protected BaseGun(String name, int bulletsPerBarrel, int totalBullets) {
+        this.setName(name);
+        this.setBulletsPerBarrel(bulletsPerBarrel);
+        this.setTotalBullets(totalBullets);
     }
 
-    public void setName(String name) {
-        if (name.isEmpty() || name.isBlank()) {
+    private void setName(String name) {
+        if (name == null || name.trim().isEmpty()) {
             throw new NullPointerException
                     (ExceptionMessages.NAME_NULL);
         }
         this.name = name;
     }
 
-    public void setBulletsPerBarrel(int bulletsPerBarrel) {
+    protected void setBulletsPerBarrel(int bulletsPerBarrel) {
         if (bulletsPerBarrel >= 0) {
             this.bulletsPerBarrel = bulletsPerBarrel;
         }
@@ -30,7 +29,7 @@ public abstract class BaseGun implements Gun {
                 (ExceptionMessages.BULLETS_LESS_THAN_ZERO);
     }
 
-    public void setTotalBullets(int totalBullets) {
+    protected void setTotalBullets(int totalBullets) {
         if (totalBullets >= 0) {
             this.totalBullets = totalBullets;
         }
@@ -55,22 +54,8 @@ public abstract class BaseGun implements Gun {
     }
 
     @Override
-    public int fire() {
-        if(canFire){
-            if(getName().equals("Pistol")){
-                return 1;
-            }else if (getName().equals("Rifle")){
-                return 5;
-            }
-        } return 0;
-
-    }
-
-    @Override
     public boolean canFire() {
-        if(getBulletsPerBarrel() > 0){
-            return true;
-        }else return getBulletsPerBarrel() > 0 && totalBullets > getBulletsPerBarrel();
+        return this.getBulletsPerBarrel() > 0 || this.getTotalBullets() > 0;
 
     }
 }
